--- a/app/views/games/answer.js.erb
+++ b/app/views/games/answer.js.erb
@@ -5,9 +5,7 @@
   <%# то нам надо немного обновить экран: %>
   <%# вывести новый вопрос, поменять текущий приз и скрыть старые подсказки %>
 
-  $('.game-question').html("<%= escape_javascript (
-      render partial: 'game_question', object: @game_question
-    ) %>");
+  $('.game-question').html("<%= escape_javascript (render partial: 'game_question', object: @game_question) %>");
 
   current_prize = $('.game-prizes').find('.active').toggleClass('active');
   current_prize.prev().toggleClass('active');
